--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "karma-junit-reporter": "^0.3.8",
     "karma-mocha": "^0.2.0",
     "karma-webpack": "^1.7.0",
-    "lodash": "^3.10.1",
+    "lodash": "3.10.1",
     "mocha": "^2.3.3",
     "sinon": "^1.17.2",
     "webpack": "^1.12.2"
