--- a/package.json
+++ b/package.json
@@ -20,34 +20,41 @@
     "url": "vslinko/vstack-validator"
   },
   "scripts": {
+    "example": "babel-node example/schema.js",
     "prepublish": "rm -rf lib && babel -d lib src",
-    "lint": "eslint src test karma.conf.js",
+    "lint": "eslint example src test karma.conf.js",
     "test": "karma start"
   },
   "devDependencies": {
-    "babel": "^5.8.29",
-    "babel-core": "^5.8.29",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.6.0",
+    "babel-core": "^6.6.0",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-export-extensions": "^6.5.0",
+    "babel-plugin-transform-flow-strip-types": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "better-log": "^1.3.3",
-    "chai": "^3.4.0",
-    "eslint": "^1.7.3",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.6.3",
-    "isparta": "^3.1.0",
-    "isparta-loader": "^1.0.0",
-    "karma": "^0.13.14",
+    "chai": "^3.5.0",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "6.0.2",
+    "eslint-plugin-flowtype": "^2.1.0",
+    "eslint-plugin-react": "^4.1.0",
+    "isparta": "^4.0.0",
+    "isparta-loader": "^2.0.0",
+    "karma": "^0.13.21",
     "karma-coverage": "^0.5.3",
-    "karma-firefox-launcher": "^0.1.6",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-junit-reporter": "^0.3.8",
-    "karma-mocha": "^0.2.0",
+    "karma-mocha": "^0.2.2",
     "karma-webpack": "^1.7.0",
-    "lodash": "^4.5.1",
-    "mocha": "^2.3.3",
-    "sinon": "^1.17.2",
-    "webpack": "^1.12.2"
+    "lodash": "^4.6.0",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3",
+    "webpack": "^1.12.14"
   },
   "peerDependencies": {
-    "lodash": "^3.0.0"
+    "lodash": "^4.6.0"
   }
 }
